--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Project_Gemini" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name = "fontFamily">@font/poppins_regular</item>
+        <item name = "fontFamily">@font/harmonia_sans</item>
+
     </style>
 
     <style name="Theme.Project_Gemini" parent="Base.Theme.Project_Gemini" />
