--- a/app/src/main/res/layout/layout_card_brand_item.xml
+++ b/app/src/main/res/layout/layout_card_brand_item.xml
@@ -2,9 +2,10 @@
 <!-- res/layout/layout_card_item.xml -->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="352dp"
+    android:layout_width="359dp"
     android:layout_height="wrap_content"
-    android:layout_marginRight="2dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginRight="4dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
@@ -13,7 +14,7 @@
         android:id="@+id/card1"
         app:cardElevation="12dp"
         android:layout_width="0dp"
-        android:layout_height="120dp"
+        android:layout_height="wrap_content"
         android:elevation="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,11 +51,15 @@
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_height="24dp"
                 android:text="State Farm"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                android:shadowColor="@color/black"
+                android:shadowDx="1"
+                android:shadowDy="1"
+                android:shadowRadius="0.5"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView12"
                 app:layout_constraintTop_toTopOf="@+id/imageView12"
@@ -68,7 +73,7 @@
                 android:layout_marginEnd="8dp"
                 android:text="General preference - Personal"
                 android:textSize="10sp"
-                app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
+                app:layout_constraintEnd_toStartOf="@+id/constraintLayout3"
                 app:layout_constraintStart_toStartOf="@+id/textView2"
                 app:layout_constraintTop_toBottomOf="@+id/textView2"
                 tools:ignore="NotSibling" />
@@ -98,9 +103,9 @@
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/constraintLayout2"
-                android:layout_width="44sp"
-                android:layout_height="24sp"
+                android:id="@+id/constraintLayout3"
+                android:layout_width="62sp"
+                android:layout_height="38sp"
                 android:layout_marginEnd="8dp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView5"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -114,7 +119,6 @@
                     android:background="@drawable/fill_5"
                     android:contentDescription="Add"
                     android:textAllCaps="false"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
