--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -9,7 +9,7 @@
     <TextView
         android:id="@+id/sign_up"
         android:layout_width="wrap_content"
-        android:layout_height="28dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="60.11dp"
         android:text="Confirm Your Number"
         android:textColor="#000000"
@@ -20,26 +20,38 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/we_ll_call_"
-        android:layout_width="0dp"
+        android:id="@+id/sign_up1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="20dp"
-        android:gravity="center_horizontal"
-        android:text="Please enter the code we sent via \n SMS to your contact"
+        android:layout_marginTop="50dp"
+        android:text="Enter 6-digit code"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        android:layout_marginStart="14dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sign_up" />
+
+    <TextView
+        android:id="@+id/we_ll_call_"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="14dp"
+        android:gravity="left"
+        android:text="We have sent a varification code to your phone "
         android:textColor="#717174"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sign_up" />
+        app:layout_constraintTop_toBottomOf="@+id/sign_up1" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="@+id/we_ll_call_"
         app:layout_constraintStart_toStartOf="@+id/we_ll_call_"
         app:layout_constraintTop_toBottomOf="@+id/we_ll_call_">
@@ -50,26 +62,56 @@
             android:id="@+id/userOTP"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/rectangular_outline_black"
+            android:background="@drawable/rectangular_outline_black_curved"
             android:hint="Enter OTP"
             android:inputType="textPersonName" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
-
-    <Button
-        android:id="@+id/button_otp_validation"
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/we_ll_call_2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/component_1"
-        android:scaleType="centerCrop"
-        android:text="Verify"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/we_ll_call_"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/we_ll_call_"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="14dp"
+        android:gravity="left"
+        android:text="@string/resend_text"
+        android:textColor="#717174"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+
+
+    <RelativeLayout
+        android:id="@+id/nextbuttoni"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginTop="50dp"
+        app:layout_constraintTop_toBottomOf="@+id/we_ll_call_2">
+
+        <ImageButton
+            android:id="@+id/button_otp_validation"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/fill_5"
+            android:contentDescription="Your Content Description"
+            android:textAllCaps="false" />
+
+        <TextView
+            android:id="@+id/buttonText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="Verify"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
