--- a/app/src/main/res/layout/activity_show_home_card.xml
+++ b/app/src/main/res/layout/activity_show_home_card.xml
@@ -397,7 +397,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_begin="600dp" />
+            app:layout_constraintGuide_begin="606dp" />
 
         <TextView
             android:id="@+id/textView8"
@@ -453,14 +453,13 @@
             android:id="@+id/btncheckoutMenu"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:backgroundTint="#54494545"
             android:text="Order Now"
             android:textAllCaps="false"
             app:layout_constraintEnd_toEndOf="@id/textView8"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@id/textView8"
-            app:layout_constraintTop_toBottomOf="@+id/card" />
+            app:layout_constraintTop_toTopOf="@+id/guideline11" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardShareInfo"
