--- a/app/src/main/res/layout/dialog_add_item_copy.xml
+++ b/app/src/main/res/layout/dialog_add_item_copy.xml
@@ -27,6 +27,7 @@
         android:layout_gravity="center_horizontal"
         android:hint="12"
         android:background="@drawable/edit_text_background"
+        android:layout_marginBottom="12dp"
         android:textSize="24sp" />
 
 </LinearLayout>
