--- a/app/src/main/res/layout/layout_menu_item.xml
+++ b/app/src/main/res/layout/layout_menu_item.xml
@@ -4,17 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginRight="4dp"
+    android:backgroundTint="#fff"
+    android:background="#fff"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card1"
-        app:cardElevation="12dp"
         android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:elevation="12dp"
+        app:cardCornerRadius="30dp"
+        android:background="#F7F7F7"
+        android:backgroundTint="#F7F7F7"
+        android:layout_height="114dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,18 +27,17 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_margin="2dp"
             android:layout_width="match_parent"
-            android:background="@drawable/rectangular_outline_black"
             android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/imageView13"
-                android:layout_width="16dp"
+                android:layout_width="10dp"
                 android:layout_height="0dp"
                 android:layout_marginStart="2dp"
-                android:src="@drawable/heroicons_star"
-                app:layout_constraintBottom_toBottomOf="@+id/textView4"
+                android:src="@drawable/red_star"
+                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                 app:layout_constraintStart_toEndOf="@+id/textView4"
-                app:layout_constraintTop_toTopOf="@+id/textView4" />
+                app:layout_constraintTop_toTopOf="@+id/textView5" />
 
             <TextView
                 android:id="@+id/textView2"
@@ -45,6 +47,10 @@
                 android:layout_marginTop="16dp"
                 android:text="State Farm"
                 android:textSize="16sp"
+                android:shadowColor="@color/black"
+                android:shadowDy="1"
+                android:shadowDx="1"
+                android:shadowRadius="1"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/constraintLayout3"
                 app:layout_constraintStart_toStartOf="parent"
@@ -55,10 +61,11 @@
                 android:id="@+id/textView3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
-                android:text="General preference - Personal"
-                android:textSize="10sp"
+                android:text="Orignal Price - Rs 10"
+                android:textColor="#E34C65"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toStartOf="@+id/constraintLayout3"
                 app:layout_constraintStart_toStartOf="@+id/textView2"
                 app:layout_constraintTop_toBottomOf="@+id/textView2"
@@ -68,30 +75,33 @@
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="17dp"
-                android:layout_marginTop="2dp"
                 android:gravity="center_vertical"
                 android:text="4.5"
-                android:textSize="10sp"
+                android:textColor="#E34C65"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView13"
                 app:layout_constraintStart_toStartOf="@+id/textView3"
-                app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                app:layout_constraintTop_toTopOf="@+id/imageView13" />
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:text="2K+ Downloads"
-                android:textSize="10sp"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView13"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="8dp"
+                android:text="Current Stock - 12 items"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/textView3"
                 app:layout_constraintStart_toEndOf="@+id/imageView13"
-                app:layout_constraintTop_toTopOf="@+id/imageView13" />
+                app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayout3"
-                android:layout_width="44sp"
-                android:layout_height="24sp"
+                android:layout_width="57sp"
+                android:layout_height="37sp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView2"
@@ -114,21 +124,20 @@
                     android:id="@+id/buttonText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Add"
+                    android:text="ADD"
+                    android:textStyle="bold"
                     android:textColor="#FFFFFF"
                     app:layout_constraintBottom_toBottomOf="@+id/button"
                     app:layout_constraintEnd_toEndOf="@+id/button"
-                    app:layout_constraintHorizontal_bias="0.533"
                     app:layout_constraintStart_toStartOf="@+id/button"
-                    app:layout_constraintTop_toTopOf="@+id/button"
-                    app:layout_constraintVertical_bias="0.0" />
+                    app:layout_constraintTop_toTopOf="@+id/button" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayout311"
-                android:layout_width="44sp"
-                android:layout_height="24sp"
+                android:layout_width="57sp"
+                android:layout_height="37sp"
                 android:layout_marginEnd="8dp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView5"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -139,7 +148,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_centerInParent="true"
-                    android:background="@drawable/fill_5"
+                    android:background="@drawable/red_boundary"
                     android:contentDescription="Remove"
                     android:textAllCaps="false"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -150,8 +159,9 @@
                     android:id="@+id/buttonText11"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Del"
-                    android:textColor="#FFFFFF"
+                    android:text="DEL"
+                    android:textStyle="bold"
+                    android:textColor="#E34C65"
                     app:layout_constraintBottom_toBottomOf="@+id/button11"
                     app:layout_constraintEnd_toEndOf="@+id/button11"
                     app:layout_constraintStart_toStartOf="@+id/button11"
