--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,6 +2,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Project_Gemini" parent="Theme.Material3.DayNight.NoActionBar">
         <item name = "fontFamily">@font/harmonia_sans</item>
+        <item name="colorPrimary">@color/black</item>
 
     </style>
 
